--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 Nov 2000</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>hossam.ozeaan.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>hossamali.me</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201016855149</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Giza ,Egypt</span></li>
                 </ul>
